# msg

./: .ammanrc.js  .gitignore  Anchor.toml  CHANGELOG.md  README.md  forumMapping.json  forumMappingWithMaxChildId.json  lib  package-lock.json  package.json  tsconfig.json  tsfmt.json
.github/workflows/: rust.yml
0xengage_client/: jestconfig.json  package-lock.json  package.json  tsconfig.json
0xengage_client/src/: index.ts
0xengage_client/tests/: index.test.ts
dispatch-cli/: package-lock.json  package.json
dispatch-cli/src/: index.ts
lib/: index.ts
programs/messaging/: Cargo.toml
programs/messaging/src/: lib.rs  treasury.rs
programs/offloadbox/: Cargo.toml
programs/postbox/: Cargo.toml
scripts/: README.md  buckets.ts  getForumId.ts  getForums.js  getForums.ts  userTest.ts
server/: README.md  package.json
server/api/: endpoint.ts  types.ts
server/config/: webpack.config.js
server/src/: App.css  App.tsx  Wallet.tsx  types.ts  utils.ts
tests/: messaging.ts  offloadbox.ts  postbox.ts  token-gating.ts  topic-gating.ts
usedispatch_cli/: package-lock.json  package.json  tsconfig.json  tslint.json
usedispatch_cli/src/: index.ts
usedispatch_client/: .gitignore  README.md  jestconfig.json  package-lock.json  package.json  tsconfig.json  userTest.ts
usedispatch_client/src/: api.js  api.ts  compress.ts  connection.ts  constants.ts  endpoint_constants.ts  forum.ts  forumv2.ts  index.ts  json.ts  mailbox.ts  naming.ts  offloadbox.ts  postbox.ts  solanart.ts  types.ts  utils.ts  wallets.ts
usedispatch_client/supabase/: config.toml
(+22 files in other folders)
