[package]
name = "messaging"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "messaging"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.22.0", features = ["init-if-needed"]}
solana-program = "1.8.6"
