[package]
name = "messaging"
version = "0.2.0"
description = "Dispatch Protocol core messaging program. Created with Anchor."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "messaging"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
mainnet = []

[dependencies]
anchor-lang = {version = "0.22.1", features = ["init-if-needed"]}
anchor-spl = "0.22.1"
solana-program = "1.8.6"
