[package]
name = "messaging"
version = "0.2.1"
description = "Dispatch Protocol core messaging program. Created with Anchor."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "messaging"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
mainnet = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
solana-program = "1.8.6"
